# OPRO

./: .gitignore  LICENSE  README.md  SMOKE_TEST.md  pyproject.toml  requirements.txt
compositional_reasoning/: __init__.py  dataset.py  model.py  train.py
docs/: index.html
docs/css/: style.css
docs/js/: main.js
dreambooth_fluxfill/: config.yaml  data.py  inference.py  inject.py  processor.py  train.py
instructional_editing/: README.md  train_joint.py  wrapper.py
integrations/: README.md
integrations/ace_plus/: README.md  opro_processor.py  patch.diff
integrations/insert_anything/: README.md  opro_processor.py  patch.diff
integrations/uno/: README.md  opro_processor.py  patch.diff
opro/: __init__.py  opro.py  utils.py
scripts/: quant_compare_dreambooth.py  smoke_dreambooth_fluxfill.py  train_stage1.sh  train_stage2.sh
