[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opro"
version = "1.0.0"
description = "Orthogonal Panel-Relative Operators for Panel-Aware In-Context Image Generation (CVPR 2026)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sanghyeon Lee" },
    { name = "Minwoo Lee" },
    { name = "Euijin Shin" },
    { name = "Kangyeol Kim" },
    { name = "Seunghwan Choi" },
    { name = "Jaegul Choo" },
]
keywords = ["cvpr2026", "diffusion", "in-context-generation", "peft", "flux", "rope"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4",
    "numpy>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
flux = [
    "diffusers>=0.30",
    "peft>=0.10",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "transformers>=4.40",
    "huggingface-hub>=0.24",
]

[project.urls]
"Project page" = "https://example.com/opro"
"Source" = "https://github.com/example/OPRO"

[tool.setuptools.packages.find]
include = [
    "opro*",
    "compositional_reasoning*",
    "dreambooth_fluxfill*",
    "instructional_editing*",
    "integrations*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
